--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5d504efe-4650-4b37-b9b3-d42b8e92bb91"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
